# rust_sandbox

./: Cargo.toml  git_token  test.txt  text.txt
dividends/: .env  Cargo.toml
eric/: Cargo.toml
eric/eric1/: Cargo.toml
eric/eric1/src/: form.html  handlers.rs  models.rs  routes.rs
eric/eric2/: Cargo.toml
eric/eric2/src/: handlers.rs  models.rs  routes.rs
eric/eric3/: Cargo.toml
eric/eric3/src/: handlers.rs  routes.rs
eric/eric4/: Cargo.toml
eric/eric4/src/: handlers.rs  models.rs  routes.rs  state.rs
eric/eric5/: Cargo.toml
ezytutors/: Cargo.toml
ezytutors/tutor-db/: .env  Cargo.toml
ezytutors/tutor-db/src/: database.sql
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs  routes.rs  state.rs
